se corrigió el problema del background que no se visibilizaba correctamente

--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ nav .profile-link a{
     width: 100%;
     height: 100vh;
     text-align: center;
-    background-image: url('/assets/img/Cover.png');
+    background-image: url('../assets/img/Cover.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
